<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_activity_main" />
    <item
        android:id="@+id/navigation_washer"
        android:icon="@drawable/washing_machine4"
        android:title="@string/title_activity_washer" />

    <item
        android:id="@+id/navigation_dryer"
        android:icon="@drawable/tumble_dryer"
        android:title="@string/title_dryer" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
